Bug and keyboard support Added keyboard support and fixed bug with too many shown characters in displaymaking it overflow.

--- a/style.css
+++ b/style.css
@@ -27,10 +27,6 @@
     border-radius: 5%; 
 }
 
-.operator{
-
-}
-
 .grid-item{
     background-color: #565656;
     border: 1px solid black;
@@ -49,6 +45,11 @@
     cursor: pointer;
     font-weight: 900;
     background-color: #454545;
+}
+
+.keyboard-hover{
+    font-weight: 900 !important;
+    background-color: #454545 !important;
 }
 
 #numpad{
